errrr
  File "/opt/osi/osi_cust/scripts/mud_editor/tuiGem.py", line 128
    nonlocal final_content_to_save
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'final_content_to_save' is assigned to before nonlocal declaration
